--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hardhat": "^2.6.8"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.2.2",
     "@openzeppelin/contracts": "^4.3.2"
   }
 }
