--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
-    "hardhat": "^2.6.8"
+    "hardhat": "^2.6.8",
+    "hardhat-log-remover": "^2.0.2"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
